--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'org.apache.httpcomponents:httpcomponents-client:4.4'
 }
