--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,19 @@
+group 'com.wonnova.sdk'
+version '1.0-SNAPSHOT'
+
 apply plugin: 'java'
 
-sourceCompatibility = 1.7
-version = '1.0'
+sourceCompatibility = 1.5
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.5'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.5'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.2.2'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.2.2'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'org.apache.httpcomponents:httpcomponents-client:4.4'
 }
